@@ -141,8 +141,6 @@ GTK_CFLAGS	= @GTK_CFLAGS@
 
 MULTIPLE_CHS	= @MULTIPLE_CHS@
 
-NEW_MODULE_SYS  = @NEW_MODULE_SYSTEM@
-
 LOCALPKGCONF	= @LOCALPKGCONF@
 
 HSTOOLFLAGS	= $(filter -H%,$(HC_FLAGS)) -M350m
